<resources>
    <string name="app_name">Greiðan</string>
    <string name="action_settings">Settings</string>

    <string name="host">http://192.168.43.57</string>
    <string name="port">8080</string>

    <!-- Activity titles-->
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_user_profile">Notandi</string>
    <string name="title_activity_ad_list">Auglýsingar</string>
    <string name="title_activity_new_ad">Ný auglýsing</string>
    <string name="title_activity_register">Register</string>

    <!-- Strings related to main activity-->
    <string name="search">Skoða</string>
    <string name="post">Setja inn</string>
    <string name="settings">Stillingar</string>
    <string name="action_logout">Log out</string>
    <string-array name="main_sidebar_items">
        <item>Prófíll</item>
        <item>Mínar auglýsingar</item>
        <item>Mín skilaboð</item>
        <item>Leita</item>
        <item>Stillingar</item>
    </string-array>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Notandanafn</string>
    <string name="prompt_password">Lykilorð</string>
    <string name="confirm_password">Staðfesta lykilorð</string>
    <string name="action_sign_in">Skrá inn</string>
    <string name="action_register">Skrá notanda</string>
    <string name="action_sign_in_short">Skrá inn</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing emailcompletions."</string>
    <string name="button_register">Nýskráning</string>
    <string name="button_login">Innskráning</string>
    <string name="action_register_link">Smelltu hér til að stofna aðgang</string>

    <!-- Strings related to posting a new ad -->
    <string name="prompt_ad_title">Titill</string>
    <string name="prompt_ad_category">Flokkur</string>
    <string name="prompt_ad_content">Efni</string>
    <string name="action_ad_post">Setja inn</string>
    <string name="action_ad_cancel">Hætta við</string>

    <!-- Strings related to posting a new ad -->
    <string name="prompt_message_subject">Titill</string>
    <string name="prompt_message_content">Efni</string>
    <string name="action_message_post">Senda</string>
    <string name="action_message_cancel">Hætta við</string>

    <!-- Strings related to ad list activity-->
    <string name="radius">Radius</string>
    <string name="radius_label">Auglýsingar innan %1$s km</string>
    <string name="ad_list_nothing_found">Ekkert fannst innan %1$s km</string>

    <!-- Strings related to ad view activity -->
    <string name="author">Höfundur: %1$s</string>
    <string name="time_posted_with_category">Sett inn þann %1$s í flokkinn %2$s</string>

    <!-- Strings related to message view activity -->
    <string name="message_author">Sendandi: %1$s</string>
    <string name="time_message_sent">Sett inn þann %1$s í flokkinn %2$s</string>

    <!-- Strings related to user profile activity -->
    <string name="member_since">Meðlimur síðan %1$s</string>
    <string name="user_rating">Einkunn: %1$.1f</string>
    <string name="button_message">Senda skilaboð</string>
    <string name="button_review">Gefa umsögn</string>
    <string name="label_reviews">Umsagnir</string>
    <string name="prompt_old_password">Gamla lykilorð</string>
    <string name="prompt_new_password">Nýtt lykilorð</string>
    <string name="button_update">Uppfæra</string>
    <string name="button_cancel">Hætta við</string>
    <string name="profile_edit">Breyta</string>

    <!-- Strings related to review-->
    <string name="new_review_label">Skrifa umsögn fyrir notandann %1$s</string>

    <!-- Random junk-->
    <string-array name="categories">
        <item>Handverk</item>
        <item>Skutl</item>
        <item>Lán á tólum</item>
        <item>Forritun</item>
        <item>Annað</item>
        <item>Handverk</item>
        <item>Skutl</item>
        <item>Lán á tólum</item>
        <item>Forritun</item>
        <item>Annað</item>
    </string-array>

</resources>
