<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.greidan.greidan.greidan.activity.EditUserProfileActivity">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/edit_user_image"
        android:src="@drawable/powered_by_google_light"
        android:layout_alignParentStart="false"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_username"
        android:hint="@string/prompt_username"
        android:layout_toLeftOf="@id/edit_user_image" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/edit_email"
        android:hint="@string/prompt_email"
        android:layout_toLeftOf="@id/edit_user_image"
        android:layout_below="@id/edit_username"
        android:layout_alignParentStart="false" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/edit_old_pass"
        android:layout_below="@id/edit_email"
        android:layout_toLeftOf="@id/edit_user_image"
        android:hint="@string/prompt_old_password" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/edit_new_pass"
        android:layout_below="@+id/edit_old_pass"
        android:hint="@string/prompt_new_password" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/edit_confirm"
        android:layout_below="@id/edit_new_pass"
        android:hint="@string/confirm_password" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_confirm"
        android:layout_marginTop="20dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_update"
            android:id="@+id/edit_profile_button_update"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel"
            android:id="@+id/edit_profile_button_cancel"
            android:layout_weight="1" />
    </LinearLayout>

</RelativeLayout>
