<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/user_profle_fragment_container"
    tools:context=".fragment.UserProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/image_profile"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/powered_by_google_light"
            android:layout_margin="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="username"
            android:id="@+id/label_username"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_toLeftOf="@id/image_profile"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="email"
            android:id="@+id/label_email"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_toLeftOf="@id/image_profile"
            android:layout_below="@id/label_username"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/member_since"
            android:id="@+id/label_member_since"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_toLeftOf="@id/image_profile"
            android:layout_below="@id/label_email"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/user_rating"
            android:id="@+id/label_user_rating"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_toLeftOf="@id/image_profile"
            android:layout_below="@id/label_member_since"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_below="@id/image_profile">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_message"
                android:id="@+id/button_message"
                android:layout_weight="1"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_review"
                android:id="@+id/button_review"
                android:layout_weight="1"/>
        </LinearLayout>

    </RelativeLayout>


</FrameLayout>
